<resources>
    <string name="app_name">SYM - Labo 4</string>

    <string name="nav_4">Capteurs</string>
    <string name="nav_5">BLE</string>

    <string name="ble_menu_search">Recherche</string>
    <string name="ble_menu_disconnect">Déconnexion</string>

    <string name="ble_empty">Veuillez lancer le scan <i>Bluetooth Low Energy</i> en appuyant ci-dessus</string>

    <string name="ble_currenttime_title">Partie Date / Heure</string>
    <string name="ble_currenttime_label">Date / Heure actuelle:</string>
    <string name="ble_currenttime_button_set">Mettre à jour</string>

    <string name="ble_clickcounter_title">Partie Compteur de clicks</string>
    <string name="ble_clickcounter_label">Valeur du compteur de clicks:</string>

    <string name="ble_temperature_title">Partie Température</string>
    <string name="ble_temperature_label">Température:</string>
    <string name="ble_temperature_button_read">Lire</string>

    <string name="ble_graphe_title">Partie Graphe</string>
    <string name="ble_sendvalue_label">Valeur à envoyer:</string>
    <string name="ble_sendvalue_button_send">Envoyer</string>

</resources>
