<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ch.heigvd.iict.sym_labo4.BleActivity">

    <ScrollView
        android:id="@+id/ble_operation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- TODO vous placerez dans ce layout toutes les vues nécessaires aux intéractions avec le périphérique BLE -->

            <!-- Temperature part -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ble_temperature_title"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ble_temperature_label" />

            <TextView
                android:id="@+id/ble_temperature_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/ble_temperature_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ble_temperature_button_read" />

            <!-- Click counter part -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ble_clickcounter_title"
                android:textSize="18sp"
                android:layout_marginTop="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ble_clickcounter_label" />

            <TextView
                android:id="@+id/ble_clickcounter_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!-- Current time part -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ble_currenttime_title"
                android:textSize="18sp"
                android:layout_marginTop="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ble_currenttime_label" />

            <TextView
                android:id="@+id/ble_currenttime_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/ble_currenttime_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ble_currenttime_button_set" />

            <!-- Graph part -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ble_graphe_title"
                android:textSize="18sp"
                android:layout_marginTop="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ble_sendvalue_label"
                />

            <EditText
                android:id="@+id/ble_sendvalue_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/ble_sendvalue_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ble_sendvalue_button_send" />


        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/ble_scan"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/ble_scanresults"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical" />

        <TextView
            android:id="@+id/ble_scanresults_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/ble_empty" />

    </RelativeLayout>

</RelativeLayout>
